# timeInspector

./: .gitignore  README.md  TimeInspector2.py  example.py  example2.py  main.py  number2.py  pyproject.toml  pyrightconfig.json  setup.py  timeInspector.py  timeInspector.spec  tkinterWindows.py
pages/: AboutPage.py  HelpPage.py  KmfPage.py  LunchPage.py  MainPage.py  SettingsPage.py  __init__.py
res/config/: settings.ini
res/img/: clock-icon.icns
utils/: __init__.py  utils.py
